--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "pinia": "^3.0.3",
+    "socket.io-client": "^4.8.1",
     "unplugin-fonts": "^1.4.0",
     "vite-plugin-vuetify": "^2.1.2",
     "vue": "^3.5.19",
